# game-frame

./: .gitignore  CMakeLists.txt  README.md  notes.org
include/SDL2/: SDL2_imageFilter.h
lib/pkgconfig/: SDL2_gfx.pc
src/: CMakeLists.txt  drawing.cpp  drawing.h  drawing_element.cpp  drawing_element.h  drawing_element_circle.cpp  drawing_element_circle.h  drawing_element_lines.cpp  drawing_element_lines.h  drawing_element_points.cpp  drawing_element_points.h  drawing_ellipse.cpp  drawing_ellipse.h  drawing_factory.cpp  drawing_factory.h  drawing_line.cpp  drawing_line.h  drawing_point.cpp  drawing_point.h  drawing_polygon.cpp  drawing_polygon.h  drawing_rectangle.cpp  drawing_rectangle.h  drawing_text.cpp  drawing_text.h  game.cpp  game.h  gameobject.h  gameobject_test.cpp  gameobject_test.h  main.cpp  math.cpp  math.h  math_vector_2d.cpp  math_vector_2d.h  medialayer.cpp  medialayer.h  medialayer_drawing.h  medialayer_drawing_renderer.h  medialayer_sdl.cpp  (+21 more)
src/component/: CmakeLists.txt  component.h  component_collision.cpp  component_collision.h  component_drawing.cpp  component_drawing.h  component_input.cpp  component_input.h  component_physics.cpp  component_physics.h
src/drawing/: CMakeLists.txt  drawing.cpp  drawing.h  drawing_element.cpp  drawing_element.h  drawing_ellipse.cpp  drawing_ellipse.h  drawing_ellipse_filled.cpp  drawing_ellipse_filled.h  drawing_factory.cpp  drawing_factory.h  drawing_image.cpp  drawing_image.h  drawing_line.cpp  drawing_line.h  drawing_point.cpp  drawing_point.h  drawing_polygon.cpp  drawing_polygon.h  drawing_polygon_filled.cpp  drawing_polygon_filled.h  drawing_rectangle.cpp  drawing_rectangle.h  drawing_rectangle_filled.cpp  drawing_rectangle_filled.h  drawing_text.cpp  drawing_text.h
src/gameobject/: CMakeLists.txt  gameobject.cpp  gameobject.h  gameobject_test.cpp  gameobject_test.h
src/medialayer/: CMakeLists.txt  medialayer.cpp  medialayer.h  medialayer_drawing_renderer.h  medialayer_sdl.cpp  medialayer_sdl.h  medialayer_sdl_drawing_renderer.cpp  medialayer_sdl_drawing_renderer.h  medialayer_sdl_texture.cpp  medialayer_sdl_texture.h  medialayer_sdl_texture_drawing.cpp  medialayer_sdl_texture_drawing.h  medialayer_sdl_texture_image.cpp  medialayer_sdl_texture_image.h  medialayer_sdl_texture_text.cpp  medialayer_sdl_texture_text.h
src/ui/: CMakeLists.txt  ui.cpp  ui.h  ui_element.cpp  ui_element.h  ui_element_clock.cpp  ui_element_clock.h  ui_element_framerate.cpp  ui_element_framerate.h
src/util/: CMakeLists.txt  math.h  math_vector_2d.cpp  math_vector_2d.h  randomnumber.cpp  randomnumber.h
tests/: CMakeLists.txt  CMakeLists.txt.in  drawing.test.cpp  drawing_ellipse.test.cpp  drawing_factory.test.cpp  drawing_image.test.cpp  drawing_line.test.cpp  drawing_point.test.cpp  drawing_polygon.test.cpp  drawing_rectangle.test.cpp  drawing_text.test.cpp  game.test.cpp  math-vector.test.cpp  math.test.cpp  math_vector_2d.test.cpp
tests/mocks/: medialayer_mock.hpp  medialayer_mock_drawing_renderer.hpp
