
add_library(lib-drawing
  drawing.h                           drawing.cpp
  drawing_element.h                   drawing_element.cpp
  drawing_text.h                      drawing_text.cpp
  drawing_image.h                     drawing_image.cpp
  drawing_point.h                     drawing_point.cpp
  drawing_line.h                      drawing_line.cpp
  drawing_rectangle.h                 drawing_rectangle.cpp
  drawing_rectangle_filled.h          drawing_rectangle_filled.cpp
  drawing_ellipse.h                   drawing_ellipse.cpp
  drawing_ellipse_filled.h            drawing_ellipse_filled.cpp
  drawing_polygon.h                   drawing_polygon.cpp
  drawing_polygon_filled.h            drawing_polygon_filled.cpp
)
